# kyewebsite

./: README.md  app.py  predict_solubility.py  pyproject.toml  requirements.txt
templates/: base.html  index.html  resume.html  solubility.html
