[tool.poetry]
name = "kyewebsite"
version = "0.1.0"
description = ""
authors = ["kyevsg <kyevsg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
flask = "^3.0.2"
numpy = "^1.26.4"
joblib = "^1.3.2"
rdkit = "^2023.9.5"
scikit-learn = "^1.4.1.post1"
matplotlib = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
